<resources>
    <string name="app_name">Qefee</string>
    <string name="title_activity_post_list">PostListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_post_info">PostInfoActivity</string>
    <string name="title_activity_new_post">NewPostActivity</string>
    <string name="title_activity_content_type_list">ContentTypeList</string>
    <string name="title_activity_admin_menu">AdminMenuActivity</string>

    <!--common-->
    <string name="submit">submit</string>
    <string name="delete">delete</string>

    <!--admin-->
    <string name="content_type_list_activity_button">ContentTypeListActivityButton</string>
    <string name="tag_list_activity_button">TagListActivityButton</string>
    <string name="visibility_list_activity_button">VisibilityListActivityButton</string>
    <string name="catalogue_list_activity_button">CatalogueListActivityButton</string>

    <!--ContentTypeListActivity-->
    <string name="addButton">add</string>
    <string name="valueTextView">value</string>
    <string name="detailTextView">detail</string>
    <string name="title_activity_add_content_type">AddContentTypeActivity</string>

    <!--AddContentTypeActivity-->
    <string name="contentTypeHint">Content Type</string>
    <string name="contentTypeDetailHint">Content Type Detail</string>
    <string name="title_activity_content_type_detail">ContentTypeDetailActivity</string>
    <string name="title_activity_tag_list">TagListActivity</string>

    <!--TagListActivity-->
    <string name="typeTextView">type</string>
    <string name="title_activity_add_tag">AddTagActivity</string>
    <string name="title_activity_tag_detail">TagDetailActivity</string>

    <!--AddTagActivity-->
    <string name="tagHint">Tag</string>
    <string name="tagDetailHint">Tag Detail</string>
    <string name="tagTypeHint">Tag Type</string>
    <string name="title_activity_visibility_list">VisibilityListActivity</string>
    <string name="title_activity_add_visibility">AddVisibilityActivity</string>

    <!--AddVisibilityActivity-->
    <string name="visibilityHint">Visibility</string>
    <string name="visibilityDetailHint">Visibility Detail</string>
    <string name="title_activity_visibility_detail">VisibilityDetailActivity</string>
    <string name="title_activity_catalogue_list">CatalogueListActivity</string>
    <string name="title_activity_add_catalogue">AddCatalogueActivity</string>

    <!--AddCatalogueActivity-->
    <string name="catalogueHint">Catalogue</string>
    <string name="catalogueDetailHint">Catalogue Detail</string>
    <string name="title_activity_catalogue_detail">CatalogueDetailActivity</string>

</resources>
