<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_admin_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.qefee.pj.qefee.activity.admin.AdminMenuActivity"
    tools:showIn="@layout/activity_admin_menu">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/contentTypeListActivityButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content_type_list_activity_button"/>
            <Button
                android:id="@+id/tagListActivityButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tag_list_activity_button"/>
            <Button
                android:id="@+id/visibilityListActivityButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/visibility_list_activity_button"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
